fix horizontal scrolling

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: stretch;
   align-content: stretch;
+  overflow-x: auto;
 
   > header {
     flex: 0 0 auto;
